--- a/style/index.css
+++ b/style/index.css
@@ -6,11 +6,19 @@
 body{
     text-align: center;
 }
-
+img{
+    position: absolute;
+    height: 60%;
+    width: 100%;
+    filter: blur(1px);
+    z-index: -1;
+    opacity: 70%;
+}
 .Container-Header{
     display: flex;
     align-items: center;
     height: 50vh;
+    
 }
 .Container-Main{
     background: white;
@@ -28,8 +36,7 @@ body{
 
 }
 .Container-Footer{
-    background: #CD7B00;
-    opacity: 70%;
+    background: #DCA34D;
     padding: 10%;
     border-top-left-radius: 20pt;
     border-top-right-radius: 20pt;
@@ -85,6 +92,7 @@ body{
 @media screen and (min-width:1024px){
     .Container-Header{
         justify-content: center;
+        
     }
     .Container-Main{
         left: 20%;
